Global Scss: prevent html overflow

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,6 +11,10 @@ $breakpoint-mobile: 480px;
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100%;
